--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 
+/*
+ * TODO Copyright
+ */
+
 buildscript {
     ext.cubaVersion = '6.2.3'
     repositories {
         maven {
-            url 'http://repository.haulmont.com:8587/nexus/content/groups/work'
+            url 'https://repo.cuba-platform.com/content/groups/work'
             credentials {
                 username(rootProject.hasProperty('repoUser') ? rootProject['repoUser'] : 'developer')
                 password(rootProject.hasProperty('repoPass') ? rootProject['repoPass'] : 'Haul2010')
