--- a/modules/core/src/app.properties
+++ b/modules/core/src/app.properties
@@ -4,15 +4,15 @@
 
 cuba.dbmsType = hsql
 
-cuba.springContextConfig = cuba-spring.xml spring.xml
+cuba.springContextConfig = +spring.xml
 
-cuba.persistenceConfig = cuba-persistence.xml persistence.xml
+cuba.persistenceConfig = +persistence.xml
 
-cuba.metadataConfig = cuba-metadata.xml metadata.xml
+cuba.metadataConfig = +metadata.xml
 
-cuba.viewsConfig = cuba-views.xml views.xml
+cuba.viewsConfig = +views.xml
 
-cuba.mainMessagePack = com.haulmont.cuba.core com.company.extuser.core
+cuba.mainMessagePack = +com.company.extuser.core
 
 ###############################################################################
 #                                  Other                                      #
@@ -21,3 +21,4 @@ cuba.mainMessagePack = com.haulmont.cuba.core com.company.extuser.core
 cuba.webContextName = app-core
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
+anonymousSessionId = 27028faa-c22b-d304-fd79-99bff859b7c2
